build: adicionada depenência mokito para realização de testes unitários

--- a/study_chess/src/main/resources/application.yml
+++ b/study_chess/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/study_chess?useTimezone=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/study_chess
     username: root
     password: 12345678
   jpa:
@@ -10,6 +10,4 @@ spring:
     properties: 
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
-      show-sql: false
-            
-            
+      show-sql: false   
