--- a/study_chess/pom.xml
+++ b/study_chess/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.33</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+  			<artifactId>mockito-core</artifactId>
+  			<version>4.0.0</version>
+  			<scope>test</scope>
+		</dependency>
 		
 	</dependencies>
 
