Implementando autenticação com jwt e spring security

--- a/study_chess/src/main/resources/application.yml
+++ b/study_chess/src/main/resources/application.yml
@@ -9,5 +9,9 @@ spring:
       ddl-auto: update
     properties: 
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-      show-sql: false   
+      dialect: org.hibernate.dialect.MySQL8Dialect
+      show-sql: false
+
+api:
+  security:
+    token: ${JWT_SECRET:my_secret}
